--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,5 +12,6 @@
     </mat-menu>
     <button mat-button [routerLink]="'/'">Cart</button>
     <button mat-button [routerLink]="'login'" *ngIf="!userLoggedIn">Login</button>
+    <button mat-button *ngIf="userLoggedIn" (click)="logout()">Logout</button>
   </mat-toolbar-row>
 </mat-toolbar>
