--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,9 @@
       <mat-label>Password</mat-label>
       <input matInput formControlName="userPassword" placeholder="Password" type="password">
     </mat-form-field>
+    <a class="forgot-link">Forgot Password or Email?</a>
     <button mat-raised-button type="submit">Login</button>
+    <a class="signup-link" (click)="navigateToSignUp()">Have no account? Switch to Sign Up</a>
     <p class="error" *ngIf="loginError">{{loginError}}</p>
   </form>
 </div>
