--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@
 
     <mat-form-field class="example-full-width">
       <mat-label>Confirm Password</mat-label>
-      <input matInput formControlName="passwordRepetition" placeholder="Password" type="password">
+      <input matInput formControlName="confirmPassword" placeholder="Password" type="password">
     </mat-form-field>
     <button mat-raised-button type="submit">Signup</button>
     <a class="signup-link" (click)="navigateToSignIn()">Have an account? Switch to Sign In</a>
