--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,6 +13,6 @@
     <button mat-button [routerLink]="'cart'">Cart</button>
     <button mat-button [routerLink]="'profile'" *ngIf="isAuthorised">Profile</button>
     <button mat-button *ngIf="isAuthorised" (click)="logout()">Logout</button>
-    <button mat-button [routerLink]="'login'" *ngIf="!isAuthorised">Login</button>
+    <button mat-button [routerLink]="'signin'" *ngIf="!isAuthorised">SignIn</button>
   </mat-toolbar-row>
 </mat-toolbar>
